<resources>
<!--  font awesome  -->
    <string name="fa_floppy_disk">\uf0c7</string>
    <string name="fa_plus">\u2b</string>
    <string name="fa_caret_right">\uf0da</string>
    <string name="fa_caret_left">\uf0d9</string>
    <string name="fa_xmark">\uf00d</string>
    <string name="fa_pen_to_square">\uf044</string>
    <string name="fa_trash">\uf1f8</string>
    <string name="fa_check">\uf00c</string>
    <string name="fa_filter_circle_xmark">\ue17b</string>
    <string name="fa_play">\uf04b</string>
    <string name="fa_right_to_bracket">\uf2f6</string>
    <string name="fa_bookmark">\uf02e</string>
    <string name="fa_magnifying_glass">\uf002</string>
    <string name="fa_filter">\uf0b0</string>
    <string name="fa_book_open">\uf518</string>
    <string name="fa_wrench">\uf0ad</string>
    <string name="fa_arrows_rotate">\uf021</string>
    <string name="fa_triangle_exclamation">\uf071</string>
    <string name="fa_circle_info">\uf05a</string>
    <string name="fa_download">\uf019</string>
    <string name="fa_ellipsis_vertical">\uf142</string>
    <string name="fa_up_down">\uf338</string>
    <string name="fa_up_down_left_right">\uf0b2</string>
    <string name="fa_list">\uf03a</string>
    <string name="fa_share_from_square">\uf14d</string>
    <string name="fa_crop">\uf125</string>
<!--  book category string  -->
    <string name="category_all">全部</string>
    <string name="doujinshi">同人誌</string>
    <string name="manga">漫畫</string>
    <string name="artist_cg">畫冊</string>
    <string name="non_h">非H</string>
    <string name="magazine">雜誌</string>
    <string name="cosplay">Cosplay</string>
    <string name="image_set">圖集</string>
<!--  search mark dialog  -->
    <string name="book_source">書源</string>
    <string name="do_apply_exclude_tag">啟用濾除標籤？</string>
<!--  random book setting dialog  -->
    <string name="set_random_book">設定隨機</string>
    <string name="do_include_h">包含H？</string>
    <string name="do_include_non_h">包含非H？</string>
<!--  other  -->
    <string name="app_name">eSaver</string>
    <string name="enter_url">輸入URL</string>
    <string name="all">全部</string>
    <string name="downloaded">已下載</string>
    <string name="not_downloaded">未下載</string>
    <string name="confirm">確定</string>
    <string name="delete">刪除</string>
    <string name="doDelete">刪除?</string>
    <string name="noName">佚名</string>
    <string name="apply">應用</string>
    <string name="cover_page">封面頁</string>
    <string name="skip_pages">跳過書頁</string>
    <string name="skip_page">跳過此頁</string>
    <string name="reload_page">重新加載</string>
    <string name="set_as_cover_page">設為封面</string>
    <string name="next_book">下一本書</string>
    <string name="rotate_left_90">左轉90°</string>
    <string name="rotate_right_90">右轉90°</string>
    <string name="select_group">選擇分組</string>
    <string name="jump_to_group">跳至分組</string>
    <string name="book_gallery">書庫</string>
    <string name="search">搜尋</string>
    <string name="category">類別</string>
    <string name="search_mark">搜尋標籤</string>
    <string name="read">閱讀</string>
    <string name="save_to_gallery">存至書庫</string>
    <string name="n_page">%1$d頁</string>
    <string name="n_score">%1$.1f分</string>
    <string name="filter_out">濾除</string>
    <string name="load_more">加載更多</string>
    <string name="keyword">關鍵字</string>
    <string name="backup">備份</string>
    <string name="other">其他</string>
    <string name="bookmark">書籤</string>
    <string name="no_bookmark">沒有書籤</string>
    <string name="local_setting">本地設定</string>
    <string name="exclude_tag">濾除標籤</string>
    <string name="search_tag">搜尋標籤</string>
    <string name="fail_to_load_picture">圖片讀取失敗</string>
    <string name="check_to_retry">點擊重試</string>
    <string name="there_is_no_more">沒有更多了</string>
    <string name="contain_offensive_context">含有令人不適的內容</string>
    <string name="book_seems_deleted">這本書可能被刪除了</string>
    <string name="tag">標籤</string>
    <string name="source_url">來源URL</string>
    <string name="detail_info">詳細資訊</string>
    <string name="n_percent">%1$d%%</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="title">標題</string>
    <string name="subtitle">副標題</string>
    <string name="custom_title">自訂標題</string>
    <string name="noGroup">無分組</string>
    <string name="group">分組</string>
    <string name="uploader">上傳者</string>
    <string name="import_db">匯入</string>
    <string name="number_of_result">結果數﹕</string>
    <string name="loaded">已讀取﹕</string>
    <string name="filtered_out">已濾去﹕</string>
    <string name="filtered_tag_is_disabled">(禁用了濾去標籤)</string>
    <string name="select_book_source">選擇書源</string>
</resources>