<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkgrey"
    android:orientation="vertical"
    android:padding="16dp">

<!--  title  -->

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/grey2"
        android:textSize="18sp"
        android:textAlignment="center"/>

<!--  name  -->

    <LinearLayout
        android:id="@+id/name_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="名字"
            android:textSize="16sp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"/>

    </LinearLayout>

<!--  category  -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:text="@string/category"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:columnCount="2">

        <Button
            android:id="@+id/cat_doujinshi"
            style="@style/SearchMarkCategoryStyle"
            android:text="@string/doujinshi" />

        <Button
            android:id="@+id/cat_manga"
            style="@style/SearchMarkCategoryStyle"
            android:text="@string/manga"/>

        <Button
            android:id="@+id/cat_artist_cg"
            style="@style/SearchMarkCategoryStyle"
            android:text="@string/artist_cg"/>

        <Button
            android:id="@+id/cat_non_h"
            style="@style/SearchMarkCategoryStyle"
            android:text="@string/non_h"/>

    </GridLayout>

<!--  keyword  -->

    <LinearLayout
        android:id="@+id/keyword_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keyword"
            android:textSize="16sp"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/keyword_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"/>

    </LinearLayout>

<!--  tags  -->

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tag"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/font_awesome"
            android:text="@string/fa_plus"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/tag_scrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/darkgrey">

        <LinearLayout
            android:id="@+id/tag_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    some tag item will be added here    -->

        </LinearLayout>

    </ScrollView>

<!--  buttons  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.example.viewer.widget.IconButton
            style="@style/IconButtonCommonStyle"
            android:id="@+id/save_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            app:viewIcon="@string/fa_floppy_disk"
            app:viewText="@string/save"/>

        <com.example.viewer.widget.IconButton
            style="@style/IconButtonCommonStyle"
            android:id="@+id/search_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            app:viewIcon="@string/fa_magnifying_glass"
            app:viewText="@string/search"/>

        <com.example.viewer.widget.IconButton
            style="@style/IconButtonCommonStyle"
            android:id="@+id/confirm_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            app:viewIcon="@string/fa_check"
            app:viewText="@string/confirm"/>

    </LinearLayout>

</LinearLayout>