<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation_menu"
    app:startDestination="@id/main_nav_gallery">

    <fragment
        android:id="@+id/main_nav_gallery"
        android:label="@string/book_gallery"
        android:name="com.example.viewer.activity.main.GalleryFragment" />

    <fragment
        android:id="@+id/main_nav_search"
        android:label="@string/search"
        android:name="com.example.viewer.activity.main.SearchMarkFragment" />

    <fragment
        android:id="@+id/main_nav_other"
        android:label="@string/other"
        android:name="com.example.viewer.activity.main.OtherFragment"/>

    <fragment
        android:id="@+id/main_nav_sort_group"
        android:name="com.example.viewer.activity.main.GroupListFragment"/>

</navigation>