<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkgrey"
    android:orientation="vertical"
    android:padding="16dp">

<!--  bookmark list  -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:textColor="@color/grey"
        android:textSize="16sp"/>

    <ScrollView
        android:id="@+id/bookmark_scrollView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="4dp">

        <GridLayout
            android:id="@+id/bookmark_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <!--  some book mark will be added here  -->

        </GridLayout>

    </ScrollView>

    <TextView
        android:id="@+id/no_bookmark_textView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_bookmark"
        android:textColor="@color/white"
        android:textSize="16sp"/>

<!--  buttons  -->

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/font_awesome"
            android:text="@string/fa_bookmark"
            android:textColor="@color/black"
            app:backgroundTint="@color/grey"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/font_awesome"
            android:text="@string/fa_trash"
            android:textColor="@color/darkgrey"
            app:backgroundTint="@color/grey2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jumpTo_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:fontFamily="@font/font_awesome"
            android:text="@string/fa_right_to_bracket"
            android:textColor="@color/darkgrey"
            app:backgroundTint="@color/grey2"/>

    </LinearLayout>

</LinearLayout>