<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/number_of_result"/>

        <TextView
            android:id="@+id/result_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/loaded"/>

        <TextView
            android:id="@+id/loaded_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/filtered_out"/>

        <TextView
            android:id="@+id/filtered_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/filtered_disabled_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:text="@string/filtered_tag_is_disabled"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/jump_to_history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="跳至上次的位置"/>

</LinearLayout>